k8s/conduktor-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: conduktor-console
  name: conduktor-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: conduktor-console
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: conduktor-console
    spec:
      containers:
        - env:
            - name: CDK_CLUSTERS_0_BOOTSTRAPSERVERS
              value: PLAINTEXT://kafka1:19092
            - name: CDK_CLUSTERS_0_COLOR
              value: '#0013E7'
            - name: CDK_CLUSTERS_0_ID
              value: default
            - name: CDK_CLUSTERS_0_KAFKACONNECTS_0_NAME
              value: full stack kafka connect
            - name: CDK_CLUSTERS_0_KAFKACONNECTS_0_URL
              value: http://kafka-connect:8083
            - name: CDK_CLUSTERS_0_NAME
              value: My Local Kafka Cluster
            - name: CDK_CLUSTERS_0_SCHEMAREGISTRY_URL
              value: http://kafka-schema-registry:8081
            - name: CDK_DATABASE_URL
              value: postgresql://conduktor:some_password@postgresql:5432/conduktor-console
          image: conduktor/conduktor-console:1.37.0
          name: conduktor-console
          ports:
            - containerPort: 8080
              protocol: TCP
      hostname: conduktor-console
      restartPolicy: Always
