k8s/kafka-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka-connect
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-connect
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: kafka-connect
    spec:
      containers:
        - args:
            - bash
            - -c
            - |
              confluent-hub install --no-prompt debezium/debezium-connector-postgresql:latest
              /etc/confluent/docker/run
          image: confluentinc/cp-kafka-connect:7.8.0
          name: kafka-connect
          ports:
            - containerPort: 8083
              protocol: TCP
      hostname: kafka-connect
      restartPolicy: Always
