k8s/kafka-rest-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka-rest-proxy
  name: kafka-rest-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-rest-proxy
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: kafka-rest-proxy
    spec:
      containers:
        - env:
            - name: KAFKA_REST_ACCESS_CONTROL_ALLOW_HEADERS
              value: Origin,Content-Type,Accept
            - name: KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS
              value: GET,POST,PUT,DELETE,OPTIONS
            - name: KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN
              value: '*'
            - name: KAFKA_REST_BOOTSTRAP_SERVERS
              value: PLAINTEXT://kafka1:19092
            - name: KAFKA_REST_HOST_NAME
              value: kafka-rest-proxy
            - name: KAFKA_REST_LISTENERS
              value: http://0.0.0.0:8082/
            - name: KAFKA_REST_SCHEMA_REGISTRY_URL
              value: http://kafka-schema-registry:8081/
          image: confluentinc/cp-kafka-rest:7.8.0
          name: kafka-rest-proxy
          ports:
            - containerPort: 8082
              protocol: TCP
      hostname: kafka-rest-proxy
      restartPolicy: Always
