k8s/kafka1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka1
  name: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: kafka1
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: INTERNAL://kafka1:19092,EXTERNAL://kafka1:9092
            - name: KAFKA_LISTENERS
              value: INTERNAL://0.0.0.0:19092,EXTERNAL://0.0.0.0:9092
            - name: KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND
              value: "true"
            - name: KAFKA_AUTHORIZER_CLASS_NAME
              value: kafka.security.authorizer.AclAuthorizer
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: INTERNAL
            - name: KAFKA_JMX_HOSTNAME
              value: kafka1
            - name: KAFKA_JMX_PORT
              value: "9001"
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
            - name: KAFKA_LOG4J_LOGGERS
              value: kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zoo1:2181
          image: confluentinc/cp-kafka:7.8.0
          name: kafka1
          ports:
            - containerPort: 9092
              protocol: TCP
            - containerPort: 19092
              protocol: TCP
            - containerPort: 9999
              protocol: TCP
      hostname: kafka1
      restartPolicy: Always
