k8s/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: conduktor-console
            - name: POSTGRES_HOST_AUTH_METHOD
              value: scram-sha-256
            - name: POSTGRES_PASSWORD
              value: some_password
            - name: POSTGRES_USER
              value: conduktor
          image: postgres:14
          name: postgresql
      hostname: postgresql
      restartPolicy: Always
