k8s/postgresql-pokesky-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: postgresql-pokesky
  name: postgresql-pokesky
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql-pokesky
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: postgresql-pokesky
    spec:
      containers:
        - args:
            - postgres
            - -c
            - wal_level=logical
          image: postgres:14
          name: postgresql-pokesky
          ports:
            - containerPort: 5432
              protocol: TCP
      hostname: postgresql-pokesky
      restartPolicy: Always
