k8s/zoo1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: zoo1
  name: zoo1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zoo1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: zoo1
    spec:
      containers:
        - env:
            - name: ZOOKEEPER_CLIENT_PORT
              value: "2181"
            - name: ZOOKEEPER_SERVERS
              value: zoo1:2888:3888
            - name: ZOOKEEPER_SERVER_ID
              value: "1"
          image: confluentinc/cp-zookeeper:7.8.0
          name: zoo1
          ports:
            - containerPort: 2181
              protocol: TCP
      hostname: zoo1
      restartPolicy: Always
