k8s/kafka-rest-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka-rest-proxy
  name: kafka-rest-proxy
spec:
  type: NodePort
  selector:
    app: kafka-rest-proxy
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082   # accessible sur 10.101.0.5:30082 via le Network Group
