k8s/kafka-schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kafka-schema-registry
  name: kafka-schema-registry
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: kafka-schema-registry
