k8s/kafka1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../package/kafka/full-stack.yml
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka1
  name: kafka1
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "19092"
      port: 19092
      targetPort: 19092
    - name: "9999"
      port: 9999
      targetPort: 9999
  selector:
    io.kompose.service: kafka1
